fixed uninstall error with how command is processed